2018-11-09

        * Version 1.6.0 released
        ========================

        Revise GCTAEdispCube::operator() interface and disable stacked response
          cutting in true energy (#2721)
        Rename GCTAResponseIrf::lo_save_thres() and GCTAResponseIrf::hi_save_thres()
          to GCTAResponseIrf::lo_safe_thres() and GCTAResponseIrf::hi_safe_thres()
          (#2716)
        Add generic CTA response cache (#2715)
        Fix precision issue with GCTABackground3D Monte-Carlo simulations (#2708)
        Revise GCTAEdisp class interface (#2704) 
        GCTAEdisp returns now energy dispersion values per MeV (#2704) 
        Protect GCTAInstDir from access to invalid information (#2694)
        Implement general CTA background model (#2694)
        Fix bug that potentially wrote the wrong exposure time in a PHA file (#2683)
        Correct handling of stacked On/Off observations without background IRF
          (#2683)
        Fix OpenMP bug in GObservations::likelihood::eval (#2678)
        Define GCTACubeBackground for energy boundaries instead of nodes (#2677) 
        Remove setting of effective area energy boundaries from "LO_THRES" and
          "HI_THRES" keywords (#2674)
        Correctly compute maximum energy in GCTAAeff2D class (#2674)
        Support "ENERG" column name for CTA energy dispersion FITS file (#2670)
        Make IRF interface compatible with H.E.S.S. format (#2660)
        Add use_irf_bkg argument to GCTAOnOffObservation constructor (#2659)
        Support effective area with theta cut in GCTAOnOffObservation (#2657)
        Add gammalib::replace_segment() function
        Apply CTA 2D energy dispersion kludge only to CTA data (#2654)
        Add ARC WCS projection (#2541)
        Add GLog::buffer() method.
        Renamed GPhoton::mcid() to GPhoton::mc_id()
        Remove at() methods from Python interface (#2515)
        Support application specific system parameter files (#2513)